[project]
name = "ark_tools"
version = "0.1"
description = ""
authors = [
    {name = "Orilx", email = "orilx@outlook.com"},
]
dependencies = [
    "UnityPy>=1.10.2",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "natsort>=8.4.0",
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

